@@ -3,16 +3,13 @@ package jtechlog.employees;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ProblemDetail;
 import org.springframework.validation.FieldError;
-import org.springframework.web.ErrorResponse;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
-import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-// @ControllerAdvice
+@ControllerAdvice
 public class EmployeesExceptionHandler {
 
     @ExceptionHandler
@@ -25,7 +22,7 @@ public class EmployeesExceptionHandler {
         ProblemDetail problemDetail = ProblemDetail.forStatusAndDetail(HttpStatus.BAD_REQUEST, "Constraint Violation");
         List<Violation> violations = exception.getBindingResult().getFieldErrors().stream()
                 .map((FieldError fe) -> new Violation(fe.getField(), fe.getDefaultMessage()))
-                .collect(Collectors.toList());
+                .toList();
         problemDetail.setProperty("violations", violations);
         return problemDetail;
     }
